--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   geocoding: ^2.0.0
   fluttertoast: ^8.0.8
   shared_preferences: ^2.0.6
+  provider: ^6.0.2
+  contacts_service: ^0.6.3
   
 
 dev_dependencies:
